# shadowpiano

./: CMakeLists.txt  README.md  package.xml  setup.py
include/shadowpiano/: shadow_piano.hpp
scripts/: feature_match.py  key_locator.py  key_locator_clean.py  segmentation.py  template_match.py
src/: shadow_piano.cpp
